src/objects/CarType__c.object
<CustomObject>
    <fields>
        <fullName>BodyStyle__c</fullName>
        <label>Body Style</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Convertible</fullName>
                </value>
                <value>
                    <fullName>Coupe</fullName>
                </value>
                <value>
                    <fullName>Hatchback</fullName>
                </value>
                <value>
                    <fullName>Pickup</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>Sedan</fullName>
                </value>
                <value>
                    <fullName>Van/Minivan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CarBrand__c</fullName>
        <label>Car Brand</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acura</fullName>
                </value>
                <value>
                    <fullName>Alfa Romeo</fullName>
                </value>
                <value>
                    <fullName>Audi</fullName>
                </value>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>Chevrolet</fullName>
                </value>
                <value>
                    <fullName>Chrysler</fullName>
                </value>
                <value>
                    <fullName>FIAT</fullName>
                </value>
                <value>
                    <fullName>Ford</fullName>
                </value>
                <value>
                    <fullName>Honda</fullName>
                </value>
                <value>
                    <fullName>Hyundai</fullName>
                </value>
                <value>
                    <fullName>Jeep</fullName>
                </value>
                <value>
                    <fullName>Kia</fullName>
                </value>
                <value>
                    <fullName>Land Rover</fullName>
                </value>
                <value>
                    <fullName>MAZDA</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz</fullName>
                </value>
                <value>
                    <fullName>Mitsubishi</fullName>
                </value>
                <value>
                    <fullName>Nissan</fullName>
                </value>
                <value>
                    <fullName>Subaru</fullName>
                </value>
                <value>
                    <fullName>Tesla</fullName>
                </value>
                <value>
                    <fullName>Toyota</fullName>
                </value>
                <value>
                    <fullName>Volkswagen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CarTypeId__c</fullName>
        <externalId>true</externalId>
        <label>Car Type Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Car Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CarTypeId__c</columns>
        <columns>CarBrand__c</columns>
        <columns>Model__c</columns>
        <columns>BodyStyle__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Car Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>